update bootstrap to v3

--- a/share/app/tmpl/index.html
+++ b/share/app/tmpl/index.html
@@ -23,32 +23,30 @@
 	</head>
 
 	<body>
-
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="navbar-inner">
-				<div class="container">
-					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#"><APP_NAME></a>
-					<div class="nav-collapse collapse">
-						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
-							<!-- <li><a href="#about">About</a></li>
-							<li><a href="#contact">Contact</a></li> -->
-						</ul>
-					</div><!--/.nav-collapse -->
+					<a class="navbar-brand" href="#"><APP_NAME></a>
 				</div>
+				<div id="navbar" class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Home</a></li>
+						<!-- <li><a href="#about">About</a></li>
+						<li><a href="#contact">Contact</a></li> -->
+					</ul>
+				</div><!--/.nav-collapse -->
 			</div>
-		</div>
+		</nav>
 
 		<div class="container">
-
 			<h1>Hello, Dwarf!</h1>
 			<p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
-
 		</div> <!-- /container -->
 	</body>
 </html>
