--- a/share/app/tmpl/400.html
+++ b/share/app/tmpl/400.html
@@ -15,6 +15,11 @@
 			}
 		</style>
 		<link href="/dwarf/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="/dwarf/bootstrap/js/html5shiv.js"></script>
+		<![endif]-->
 	</head>
 
 	<body>
